# PAT_practice

./: README.md
A1001/: CMakeLists.txt
A1001/src/: main.cpp
A1006/: CMakeLists.txt
A1006/src/: main.cpp
A1009/: CMakeLists.txt
A1009/src/: main.cpp
A1012/: CMakeLists.txt
A1012/src/: main  main.cpp
A1025/: CMakeLists.txt
A1025/src/: main.cpp
A1036/: CMakeLists.txt
A1036/src/: main  main.cpp
A1046/: CMakeLists.txt
A1046/src/: main.cpp
A1073/: CMakeLists.txt
A1073/src/: main.cpp
B1010/: CMakeLists.txt
B1010/src/: main.cpp
B1013/: CMakeLists.txt
B1013/src/: main.cpp
B1023/: CMakeLists.txt
B1023/src/: main.cpp
B1037/: CMakeLists.txt
B1037/src/: main.cpp
B1041/: CMakeLists.txt
B1041/src/: main.cpp
B1045/: CMakeLists.txt
B1045/src/: main.cpp
TEMPLATE/: CMakeLists.txt
